--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/anomaly.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/anomaly.yml
@@ -21,6 +21,7 @@
     - AnomalyFlora
     - AnomalyShadow
     - AnomalyTech
+    - RandomAnomalyInjectorSpawner #Yes, all anomaly zones are rare enough that they should go their own subgroup
     chance: 1
     offset: 0.15 # not to put it higher. The anomaly sychnronizer looks for anomalies within this radius, and if the radius is higher, the anomaly can be attracted from a neighboring tile.
 
@@ -41,3 +42,26 @@
     - AnomalyRockUranium
     chance: 1
     offset: 0.15
+
+- type: entity
+  id: RandomAnomalyInjectorSpawner
+  parent: MarkerBase
+  components:
+  - type: Sprite
+    layers:
+    - state: red
+    - sprite: Structures/Specific/Anomalies/tech_anom.rsi
+      state: pulse
+  - type: RandomSpawner
+    prototypes:
+    - AnomalyTrapPyroclastic
+    - AnomalyTrapElectric
+    - AnomalyTrapShadow
+    - AnomalyTrapIce
+    - AnomalyTrapFlora
+    - AnomalyTrapBluespace
+    - AnomalyTrapFlesh
+    - AnomalyTrapGravity
+    - AnomalyTrapTech
+    chance: 1
+  
