--- a/Resources/Prototypes/Entities/Structures/Specific/Anomaly/anomaly_injections.yml
+++ b/Resources/Prototypes/Entities/Structures/Specific/Anomaly/anomaly_injections.yml
@@ -309,7 +309,7 @@
   components:
   - type: Anomaly
     corePrototype: AnomalyCoreRock
-    coreInertPrototype: AnomalyRock
+    coreInertPrototype: RandomRockAnomalySpawner
   - type: PointLight
     color: "#5ca8cb"
   - type: TileSpawnAnomaly
