Fix ai upload console itemslot whitelist

--- a/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
@@ -75,6 +75,7 @@
       name: station-ai-mind-slot
       locked: true
       whitelist:
+        requireAll: true
         tags:
         - StationAi
   - type: ContainerContainer
