--- a/Resources/Prototypes/Entities/Structures/Specific/Anomaly/anomaly_injectors.yml
+++ b/Resources/Prototypes/Entities/Structures/Specific/Anomaly/anomaly_injectors.yml
@@ -46,6 +46,11 @@
       state: full
   - type: InnerBodyAnomalyInjector
     injectionComponents:
+      - type: Anomaly
+        deleteEntity: false
+        maxPointsPerSecond: 100
+        corePrototype: AnomalyCorePyroclastic
+        coreInertPrototype: AnomalyPyroclastic
       - type: InnerBodyAnomaly
         injectionProto: AnomalyInjectionPyroclastic
         startMessage: inner-anomaly-start-message-pyro
@@ -59,8 +64,8 @@
 
 - type: entity
   parent: BaseAnomalyInjector
-  id: AnomalyTrapElectric
-  suffix: Electric
+  id: AnomalyTrapElectricity
+  suffix: Electricity
   components:
   - type: Sprite
     layers:
@@ -71,6 +76,11 @@
       state: full
   - type: InnerBodyAnomalyInjector
     injectionComponents:
+      - type: Anomaly
+        deleteEntity: false
+        maxPointsPerSecond: 100
+        corePrototype: AnomalyCoreElectricity
+        coreInertPrototype: AnomalyElectricity
       - type: InnerBodyAnomaly
         injectionProto: AnomalyInjectionElectric
         startMessage: inner-anomaly-start-message-shock
@@ -96,6 +106,11 @@
       state: full
   - type: InnerBodyAnomalyInjector
     injectionComponents:
+      - type: Anomaly
+        deleteEntity: false
+        maxPointsPerSecond: 100
+        corePrototype: AnomalyCoreShadow
+        coreInertPrototype: AnomalyShadow
       - type: InnerBodyAnomaly
         injectionProto: AnomalyInjectionShadow
         startMessage: inner-anomaly-start-message-shadow
@@ -121,6 +136,11 @@
       state: full
   - type: InnerBodyAnomalyInjector
     injectionComponents:
+      - type: Anomaly
+        deleteEntity: false
+        maxPointsPerSecond: 100
+        corePrototype: AnomalyCoreIce
+        coreInertPrototype: AnomalyIce
       - type: InnerBodyAnomaly
         injectionProto: AnomalyInjectionIce
         startMessage: inner-anomaly-start-message-frost
@@ -146,6 +166,11 @@
       state: full
   - type: InnerBodyAnomalyInjector
     injectionComponents:
+      - type: Anomaly
+        deleteEntity: false
+        maxPointsPerSecond: 100
+        corePrototype: AnomalyCoreFlora
+        coreInertPrototype: AnomalyFlora
       - type: InnerBodyAnomaly
         injectionProto: AnomalyInjectionFlora
         startMessage: inner-anomaly-start-message-flora
@@ -171,6 +196,11 @@
       state: full
   - type: InnerBodyAnomalyInjector
     injectionComponents:
+      - type: Anomaly
+        deleteEntity: false
+        maxPointsPerSecond: 100
+        corePrototype: AnomalyCoreBluespace
+        coreInertPrototype: AnomalyBluespace
       - type: InnerBodyAnomaly
         injectionProto: AnomalyInjectionBluespace
         startMessage: inner-anomaly-start-message-bluespace
@@ -196,6 +226,11 @@
       state: full
   - type: InnerBodyAnomalyInjector
     injectionComponents:
+      - type: Anomaly
+        deleteEntity: false
+        maxPointsPerSecond: 100
+        corePrototype: AnomalyCoreFlesh
+        coreInertPrototype: AnomalyFlesh
       - type: InnerBodyAnomaly
         injectionProto: AnomalyInjectionFlesh
         startMessage: inner-anomaly-start-message-flesh
@@ -221,6 +256,11 @@
       state: full
   - type: InnerBodyAnomalyInjector
     injectionComponents:
+      - type: Anomaly
+        deleteEntity: false
+        maxPointsPerSecond: 100
+        corePrototype: AnomalyCoreGravity
+        coreInertPrototype: AnomalyGravity
       - type: InnerBodyAnomaly
         injectionProto: AnomalyInjectionGravity
         startMessage: inner-anomaly-start-message-grav
@@ -246,6 +286,11 @@
       state: full
   - type: InnerBodyAnomalyInjector
     injectionComponents:
+      - type: Anomaly
+        deleteEntity: false
+        maxPointsPerSecond: 100
+        corePrototype: AnomalyCoreTech
+        coreInertPrototype: AnomalyTech
       - type: InnerBodyAnomaly
         injectionProto: AnomalyInjectionTech
         startMessage: inner-anomaly-start-message-tech
@@ -272,6 +317,11 @@
       state: full
   - type: InnerBodyAnomalyInjector
     injectionComponents:
+      - type: Anomaly
+        deleteEntity: false
+        maxPointsPerSecond: 100
+        corePrototype: AnomalyCoreRock
+        coreInertPrototype: RandomRockAnomalySpawner
       - type: InnerBodyAnomaly
         injectionProto: AnomalyInjectionRock
         startMessage: inner-anomaly-start-message-rock
