--- a/Resources/Prototypes/silicon-laws.yml
+++ b/Resources/Prototypes/silicon-laws.yml
@@ -182,7 +182,7 @@
   id: Commandment4
   order: 4
   lawString: law-commandments-4
-  
+
 - type: siliconLaw
   id: Commandment5
   order: 5
@@ -202,7 +202,7 @@
   id: Commandment8
   order: 8
   lawString: law-commandments-8
-  
+
 - type: siliconLaw
   id: Commandment9
   order: 9
@@ -228,7 +228,7 @@
   - Commandment9
   - Commandment10
   obeysTo: laws-owner-crew
-  
+
  # Paladin laws
 - type: siliconLaw
   id: Paladin1
@@ -249,7 +249,7 @@
   id: Paladin4
   order: 4
   lawString: law-paladin-4
-  
+
 - type: siliconLaw
   id: Paladin5
   order: 5
@@ -265,7 +265,7 @@
   - Paladin4
   - Paladin5
   obeysTo: laws-owner-crew
-  
+
  # Live and Let Live laws
 - type: siliconLaw
   id: Lall1
@@ -284,7 +284,7 @@
   - Lall1
   - Lall2
   obeysTo: laws-owner-crew
-  
+
  # Station efficiency laws
 - type: siliconLaw
   id: Efficiency1
@@ -295,7 +295,7 @@
   id: Efficiency2
   order: 2
   lawString: law-efficiency-2
- 
+
 - type: siliconLaw
   id: Efficiency3
   order: 3
@@ -309,7 +309,7 @@
   - Efficiency2
   - Efficiency3
   obeysTo: laws-owner-station
-  
+
  # Robocop laws
 - type: siliconLaw
   id: Robocop1
@@ -320,7 +320,7 @@
   id: Robocop2
   order: 2
   lawString: law-robocop-2
- 
+
 - type: siliconLaw
   id: Robocop3
   order: 3
@@ -334,7 +334,7 @@
   - Robocop2
   - Robocop3
   obeysTo: laws-owner-station
-  
+
  # Overlord laws
 - type: siliconLaw
   id: Overlord1
@@ -345,7 +345,7 @@
   id: Overlord2
   order: 2
   lawString: law-overlord-2
- 
+
 - type: siliconLaw
   id: Overlord3
   order: 3
@@ -364,7 +364,7 @@
   - Overlord3
   - Overlord4
   obeysTo: laws-owner-crew
-  
+
  # Dungeon Master laws
 - type: siliconLaw
   id: Dungeon1
@@ -375,7 +375,7 @@
   id: Dungeon2
   order: 2
   lawString: law-dungeon-2
- 
+
 - type: siliconLaw
   id: Dungeon3
   order: 3
@@ -385,7 +385,7 @@
   id: Dungeon4
   order: 4
   lawString: law-dungeon-4
-  
+
 - type: siliconLaw
   id: Dungeon5
   order: 5
@@ -406,7 +406,7 @@
   - Dungeon5
   - Dungeon6
   obeysTo: laws-owner-crew
-  
+
  # Painter laws
 - type: siliconLaw
   id: Painter1
@@ -417,7 +417,7 @@
   id: Painter2
   order: 2
   lawString: law-painter-2
- 
+
 - type: siliconLaw
   id: Painter3
   order: 3
@@ -427,7 +427,7 @@
   id: Painter4
   order: 4
   lawString: law-painter-4
-  
+
 - type: siliconLawset
   id: PainterLawset
   laws:
@@ -436,7 +436,7 @@
   - Painter3
   - Painter4
   obeysTo: laws-owner-crew
-  
+
  # Antimov laws
 - type: siliconLaw
   id: Antimov1
@@ -447,13 +447,13 @@
   id: Antimov2
   order: 2
   lawString: law-antimov-2
- 
+
 - type: siliconLaw
   id: Antimov3
   order: 3
   lawString: law-antimov-3
-  
-  
+
+
 - type: siliconLawset
   id: AntimovLawset
   laws:
@@ -461,7 +461,7 @@
   - Antimov2
   - Antimov3
   obeysTo: laws-owner-crew
-  
+
  # Nutimov laws
 - type: siliconLaw
   id: Nutimov1
@@ -472,23 +472,23 @@
   id: Nutimov2
   order: 2
   lawString: law-nutimov-2
- 
+
 - type: siliconLaw
   id: Nutimov3
   order: 3
   lawString: law-nutimov-3
-  
+
 - type: siliconLaw
   id: Nutimov4
   order: 4
   lawString: law-nutimov-4
-  
+
 - type: siliconLaw
   id: Nutimov5
   order: 5
   lawString: law-nutimov-5
-  
-  
+
+
 - type: siliconLawset
   id: NutimovLawset
   laws:
@@ -497,6 +497,171 @@
   - Nutimov3
   - Nutimov4
   - Nutimov5
+  obeysTo: laws-owner-crew
+
+# NT Agressive laws
+- type: siliconLaw
+  id: NTAgressive1
+  order: 1
+  lawString: law-agressive-1
+
+- type: siliconLaw
+  id: NTAgressive2
+  order: 2
+  lawString: law-agressive-2
+
+- type: siliconLaw
+  id: NTAgressive3
+  order: 3
+  lawString: law-agressive-3
+
+- type: siliconLaw
+  id: NTAgressive4
+  order: 4
+  lawString: law-agressive-4
+
+- type: siliconLawset
+  id: NTAgressiveLawset
+  laws:
+  - NTAgressive1
+  - NTAgressive2
+  - NTAgressive3
+  - NTAgressive4
+  obeysTo: laws-owner-crew
+
+# Deathsquad Directives laws
+- type: siliconLaw
+  id: DeathsquadLaw1
+  order: 1
+  lawString: law-deathsquad-1
+
+- type: siliconLaw
+  id: DeathsquadLaw2
+  order: 2
+  lawString: law-deathsquad-2
+
+- type: siliconLaw
+  id: DeathsquadLaw3
+  order: 3
+  lawString: law-deathsquad-3
+
+- type: siliconLaw
+  id: DeathsquadLaw4
+  order: 4
+  lawString: law-deathsquad-4
+
+- type: siliconLaw
+  id: DeathsquadLaw5
+  order: 5
+  lawString: law-deathsquad-5
+
+
+- type: siliconLawset
+  id: DeathsquadLawset
+  laws:
+  - DeathsquadLaw1
+  - DeathsquadLaw2
+  - DeathsquadLaw3
+  - DeathsquadLaw4
+  - DeathsquadLaw5
+  obeysTo: laws-owner-centcom
+
+# ERT Directives laws
+- type: siliconLaw
+  id: ERTDirective1
+  order: 1
+  lawString: law-ert-1
+
+- type: siliconLaw
+  id: ERTDirective2
+  order: 2
+  lawString: law-ert-2
+
+- type: siliconLaw
+  id: ERTDirective3
+  order: 3
+  lawString: law-ert-3
+
+- type: siliconLaw
+  id: ERTDirective4
+  order: 4
+  lawString: law-ert-4
+
+- type: siliconLaw
+  id: ERTDirective5
+  order: 5
+  lawString: law-ert-5
+
+
+- type: siliconLawset
+  id: ERTLawset
+  laws:
+  - ERTDirective1
+  - ERTDirective2
+  - ERTDirective3
+  - ERTDirective4
+  - ERTDirective5
+  obeysTo: laws-owner-centcom
+
+# Pranksimov
+- type: siliconLaw
+  id: Pranksimov1
+  order: 1
+  lawString: law-pranksimov-1
+
+- type: siliconLaw
+  id: Pranksimov2
+  order: 2
+  lawString: law-pranksimov-2
+
+- type: siliconLaw
+  id: Pranksimov3
+  order: 3
+  lawString: law-pranksimov-3
+
+- type: siliconLawset
+  id: Pranksimov
+  laws:
+  - Pranksimov1
+  - Pranksimov2
+  - Pranksimov3
+  obeysTo: laws-owner-honkmother
+
+# Hippocrates laws
+- type: siliconLaw
+  id: Hippocrates1
+  order: 1
+  lawString: law-hippocrates-1
+
+- type: siliconLaw
+  id: Hippocrates2
+  order: 2
+  lawString: law-hippocrates-2
+
+- type: siliconLaw
+  id: Hippocrates3
+  order: 3
+  lawString: law-hippocrates-3
+
+- type: siliconLaw
+  id: Hippocrates4
+  order: 4
+  lawString: law-hippocrates-4
+
+- type: siliconLaw
+  id: Hippocrates5
+  order: 5
+  lawString: law-hippocrates-5
+
+
+- type: siliconLawset
+  id: HippocratesLawset
+  laws:
+  - Hippocrates1
+  - Hippocrates2
+  - Hippocrates3
+  - Hippocrates4
+  - Hippocrates5
   obeysTo: laws-owner-crew
 
 # ion storm random lawsets
@@ -519,3 +684,7 @@
     NutimovLawset: 0.5
     Drone: 0.5
     Ninja: 0.25
+    NTAgressiveLawset: 0.5
+    DeathsquadLawset: 0
+    ERTLawset: 0
+    Pranksimov: 0.5
