--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/anomaly.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/anomaly.yml
@@ -55,7 +55,7 @@
   - type: RandomSpawner
     prototypes:
     - AnomalyTrapPyroclastic
-    - AnomalyTrapElectric
+    - AnomalyTrapElectricity
     - AnomalyTrapShadow
     - AnomalyTrapIce
     - AnomalyTrapFlora
